# pocomc

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: PMC.yml  draft-pdf.yml  release_to_pypi.yml  setup_and_run_tests.yml
docs/: requirements.txt
docs/source/: advanced.rst  api.rst  background.rst  blobs.ipynb  checkpoint.ipynb  conf.py  examples.rst  faq.rst  fitting.ipynb  flow.ipynb  index.rst  install.rst  likelihood.ipynb  model_comparison.ipynb  parallelization.ipynb  priors.rst  quickstart.ipynb  results.rst  sampling.ipynb  tutorials.rst
docs/source/api/: flow.rst  mcmc.rst  parallel.rst  plotting.rst  prior.rst  scaler.rst  tools.rst
docs/source/pages/: quickstart.ipynb
docs/source/tutorials/: advanced_example.ipynb  bridge_sampling.ipynb  fitting.ipynb  model_comparison.ipynb
examples/: Double Gaussian.ipynb  Funnel.ipynb  Gaussian Shells.ipynb  Rosenbrock.ipynb
joss/: paper.bib  paper.md
pocomc/: __init__.py  _version.py  flow.py  flow2.py  flow3.py  geometry.py  input_validation.py  maf.py  mcmc.py  parallel.py  particles.py  plotting.py  prior.py  priors.py  sampler.py  scaler.py  student.py  threading.py  tools.py  train.py
pocomc/sinf/: GIS.py  RQspline.py  SINF.py  SlicedWasserstein.py  base.py  debug.py  optimize.py
pocomc/utils/: logging.py
tests/: flow.py  sampler.py  scaler.py  test_flow.py  test_pearson.py  test_plotting.py  test_prior.py  test_priors.py  test_sampler.py  test_scaler.py  test_state.py  test_tools.py
