[metadata]
name = pocomc
version = attr: pocomc._version.version
author = Minas Karamanis
author_email = minaskar@gmail.com
url = https://github.com/minaskar/pocomc
description = Preconditioned Monte Carlo
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENCE
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages =
    pocomc
    pocomc/utils
test_suite = tests
setup_requires =
    setuptools >=46.4.0
install_requires =
    numpy
    torch
    zuko
    tqdm
    scipy
    dill